--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -298,9 +298,9 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=Sketcher_ArcExample3.png&amp;filetimestamp=20240130140506&amp;.html" class="mw-file-description"><img src="../File/Sketcher_ArcExample3.png" decoding="async" width="300" height="225" class="mw-file-element" data-file-width="800" data-file-height="600"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Oblouk vytvo&#345;en&yacute; zad&aacute;n&iacute;m v&scaron;ech parametr&#367; zobrazen&iacute; s automaticky vytvo&#345;en&yacute;mi vazbami</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Coordinate_display">Coordinate display</span></h3>
-</div>
+<p><span id="Coordinate_display"></span>
+</p>
+<h3><span id="Zobrazen.C3.AD_sou.C5.99adnic"></span><span class="mw-headline" id="Zobrazen&iacute;_sou&#345;adnic">Zobrazen&iacute; sou&#345;adnic</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If the <b>Show coordinates next to the cursor while editing</b> <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">preference</a> is checked (default), the parameters of the current geometry tool (coordinates, radius, or length and angle) are displayed next to the cursor. This is deactivated while On-View-Parameters are shown.
 </p>
@@ -508,12 +508,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118144852
+Cached time: 20260118144946
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.424 seconds
-Real time usage: 0.846 seconds
+CPU time usage: 0.470 seconds
+Real time usage: 1.645 seconds
 Preprocessor visited node count: 1410/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -524,19 +524,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.954      1 -total
- 21.24%    9.759      1 Template:Sketcher_Tools_navi/cs
- 14.72%    6.763      8 Template:VersionPlus
- 14.63%    6.722      1 Template:TOCright
- 13.66%    6.278      2 Template:Navigation_menu_2
- 12.42%    5.707      1 Template:Userdocnavi/cs
-  8.01%    3.681      2 Template:Docnav
-  6.47%    2.973      1 Template:PropertyView
-  4.57%    2.101     34 Template:Version
-  3.36%    1.546      1 Template:Variable
+100.00%  134.520      1 -total
+ 19.50%   26.232      1 Template:Sketcher_Tools_navi/cs
+ 18.37%   24.712      1 Template:Userdocnavi/cs
+ 16.09%   21.648      2 Template:Navigation_menu_2
+ 12.90%   17.349      1 Template:PropertyView
+  9.30%   12.507      6 Template:Caption
+  8.39%   11.293      8 Template:VersionPlus
+  8.37%   11.261      1 Template:Variable
+  5.16%    6.935      1 Template:TOCright
+  4.36%    5.868     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144852 and revision id 1740647. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144944 and revision id 1740649. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
