--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -301,10 +301,8 @@
 <p><span id="Coordinate_display"></span>
 </p>
 <h3><span id="Zobrazen.C3.AD_sou.C5.99adnic"></span><span class="mw-headline" id="Zobrazen&iacute;_sou&#345;adnic">Zobrazen&iacute; sou&#345;adnic</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If the <b>Show coordinates next to the cursor while editing</b> <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">preference</a> is checked (default), the parameters of the current geometry tool (coordinates, radius, or length and angle) are displayed next to the cursor. This is deactivated while On-View-Parameters are shown.
+<p>Pokud je v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> za&scaron;krtnuto pol&iacute;&#269;ko <b>Zobrazit sou&#345;adnice vedle kurzoru p&#345;i &uacute;prav&aacute;ch</b> (v&yacute;choz&iacute; nastaven&iacute;), zobraz&iacute; se vedle kurzoru parametry aktu&aacute;ln&iacute;ho geometrick&eacute;ho n&aacute;stroje (sou&#345;adnice, polom&#283;r nebo d&eacute;lka a &uacute;hel). Tato funkce je deaktivov&aacute;na, kdy&#382; jsou zobrazeny parametry zobrazen&iacute;.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Selection_methods">Selection methods</span></h2>
 </div>
@@ -508,13 +506,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118144946
+Cached time: 20260118145306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.470 seconds
-Real time usage: 1.645 seconds
-Preprocessor visited node count: 1410/1000000
+CPU time usage: 0.523 seconds
+Real time usage: 0.699 seconds
+Preprocessor visited node count: 1409/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -524,19 +522,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  134.520      1 -total
- 19.50%   26.232      1 Template:Sketcher_Tools_navi/cs
- 18.37%   24.712      1 Template:Userdocnavi/cs
- 16.09%   21.648      2 Template:Navigation_menu_2
- 12.90%   17.349      1 Template:PropertyView
-  9.30%   12.507      6 Template:Caption
-  8.39%   11.293      8 Template:VersionPlus
-  8.37%   11.261      1 Template:Variable
-  5.16%    6.935      1 Template:TOCright
-  4.36%    5.868     14 Template:KEY
+100.00%   38.633      1 -total
+ 20.97%    8.102      1 Template:Sketcher_Tools_navi/cs
+ 15.61%    6.031      1 Template:Userdocnavi/cs
+ 13.84%    5.346      2 Template:Navigation_menu_2
+ 10.86%    4.197      1 Template:PropertyView
+  6.78%    2.621      2 Template:Docnav
+  6.69%    2.586      1 Template:Variable
+  6.62%    2.556     34 Template:Version
+  5.94%    2.294     14 Template:KEY
+  5.54%    2.142      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118144944 and revision id 1740649. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145306 and revision id 1740651. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
