--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -302,10 +302,9 @@
 </p>
 <h3><span id="Zobrazen.C3.AD_sou.C5.99adnic"></span><span class="mw-headline" id="Zobrazen&iacute;_sou&#345;adnic">Zobrazen&iacute; sou&#345;adnic</span></h3>
 <p>Pokud je v <a href="../Sketcher_Preferences.html#Display" title="Sketcher Preferences">p&#345;edvolb&aacute;ch</a> za&scaron;krtnuto pol&iacute;&#269;ko <b>Zobrazit sou&#345;adnice vedle kurzoru p&#345;i &uacute;prav&aacute;ch</b> (v&yacute;choz&iacute; nastaven&iacute;), zobraz&iacute; se vedle kurzoru parametry aktu&aacute;ln&iacute;ho geometrick&eacute;ho n&aacute;stroje (sou&#345;adnice, polom&#283;r nebo d&eacute;lka a &uacute;hel). Tato funkce je deaktivov&aacute;na, kdy&#382; jsou zobrazeny parametry zobrazen&iacute;.
+</p><p><span id="Selection_methods"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Selection_methods">Selection methods</span></h2>
-</div>
+<h2><span id="Metody_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="Metody_v&yacute;b&#283;ru">Metody v&yacute;b&#283;ru</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>While a sketch is in edit mode the following selection methods can be used:
 </p>
@@ -506,12 +505,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118145306
+Cached time: 20260118145340
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.523 seconds
-Real time usage: 0.699 seconds
+CPU time usage: 0.441 seconds
+Real time usage: 0.823 seconds
 Preprocessor visited node count: 1409/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -522,19 +521,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.633      1 -total
- 20.97%    8.102      1 Template:Sketcher_Tools_navi/cs
- 15.61%    6.031      1 Template:Userdocnavi/cs
- 13.84%    5.346      2 Template:Navigation_menu_2
- 10.86%    4.197      1 Template:PropertyView
-  6.78%    2.621      2 Template:Docnav
-  6.69%    2.586      1 Template:Variable
-  6.62%    2.556     34 Template:Version
-  5.94%    2.294     14 Template:KEY
-  5.54%    2.142      8 Template:VersionPlus
+100.00%   64.189      1 -total
+ 22.77%   14.616      1 Template:Sketcher_Tools_navi/cs
+ 16.70%   10.722      1 Template:PropertyView
+ 14.55%    9.341      1 Template:Userdocnavi/cs
+ 11.27%    7.237      2 Template:Navigation_menu_2
+  7.27%    4.664     34 Template:Version
+  6.84%    4.392      2 Template:Docnav
+  6.51%    4.177      8 Template:VersionPlus
+  5.85%    3.757      1 Template:Variable
+  5.19%    3.331     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145306 and revision id 1740651. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145339 and revision id 1740653. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
