--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -305,10 +305,8 @@
 </p><p><span id="Selection_methods"></span>
 </p>
 <h2><span id="Metody_v.C3.BDb.C4.9Bru"></span><span class="mw-headline" id="Metody_v&yacute;b&#283;ru">Metody v&yacute;b&#283;ru</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>While a sketch is in edit mode the following selection methods can be used:
+<p>V re&#382;imu &uacute;pravy n&aacute;&#269;rtu lze pou&#382;&iacute;t n&aacute;sleduj&iacute;c&iacute; metody v&yacute;b&#283;ru:
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="3D_View_element_selection">3D View element selection</span></h3>
 </div>
@@ -505,13 +503,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118145340
+Cached time: 20260118145414
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.441 seconds
-Real time usage: 0.823 seconds
-Preprocessor visited node count: 1409/1000000
+CPU time usage: 0.419 seconds
+Real time usage: 0.664 seconds
+Preprocessor visited node count: 1408/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -521,19 +519,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.189      1 -total
- 22.77%   14.616      1 Template:Sketcher_Tools_navi/cs
- 16.70%   10.722      1 Template:PropertyView
- 14.55%    9.341      1 Template:Userdocnavi/cs
- 11.27%    7.237      2 Template:Navigation_menu_2
-  7.27%    4.664     34 Template:Version
-  6.84%    4.392      2 Template:Docnav
-  6.51%    4.177      8 Template:VersionPlus
-  5.85%    3.757      1 Template:Variable
-  5.19%    3.331     14 Template:KEY
+100.00%   62.490      1 -total
+ 20.35%   12.716      5 Template:MenuCommand
+ 18.79%   11.739      1 Template:Userdocnavi/cs
+ 16.48%   10.296      2 Template:Navigation_menu_2
+ 15.32%    9.575      1 Template:Sketcher_Tools_navi/cs
+  8.93%    5.580      1 Template:PropertyView
+  7.86%    4.909     34 Template:Version
+  4.87%    3.041      6 Template:Caption
+  4.17%    2.604      1 Template:Variable
+  4.12%    2.575      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145339 and revision id 1740653. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145413 and revision id 1740655. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
