--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -309,10 +309,8 @@
 </p><p><span id="3D_View_element_selection"></span>
 </p>
 <h3><span id="V.C3.BDb.C4.9Br_prvk.C5.AF_3D_zobrazen.C3.AD"></span><span class="mw-headline" id="V&yacute;b&#283;r_prvk&#367;_3D_zobrazen&iacute;">V&yacute;b&#283;r prvk&#367; 3D zobrazen&iacute;</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>As elsewhere in FreeCAD, an element can be selected in the <a href="../3D_View.html" title="3D View">3D View</a> with a single left mouse click. But there is no need to hold down the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span> key when selecting multiple elements. Holding down that key is possible though and has the advantage that you can miss-click without losing the selection. Edges, points and constraints can be selected in this manner.
+<p>Stejn&#283; jako jinde ve FreeCADu lze prvek ve <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> vybrat jedin&yacute;m kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i. P&#345;i v&yacute;b&#283;ru v&iacute;ce prvk&#367; v&scaron;ak nen&iacute; nutn&eacute; dr&#382;et stisknutou kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>. Podr&#382;en&iacute; t&eacute;to kl&aacute;vesy je v&scaron;ak mo&#382;n&eacute; a m&aacute; tu v&yacute;hodu, &#382;e m&#367;&#382;ete kliknout mimo, ani&#382; byste ztratili v&yacute;b&#283;r. T&iacute;mto zp&#367;sobem lze vybrat hrany, body a vazby.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="3D_View_box_selection">3D View box selection</span></h3>
 </div>
@@ -502,13 +500,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118145707
+Cached time: 20260118145925
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.457 seconds
-Real time usage: 0.874 seconds
-Preprocessor visited node count: 1408/1000000
+CPU time usage: 0.458 seconds
+Real time usage: 0.634 seconds
+Preprocessor visited node count: 1407/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -518,19 +516,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.426      1 -total
- 20.80%   16.309      1 Template:Sketcher_Tools_navi/cs
- 13.61%   10.671      1 Template:PropertyView
- 12.66%    9.928      2 Template:Navigation_menu_2
- 12.37%    9.699      1 Template:Userdocnavi/cs
- 10.39%    8.149      1 Template:Variable
-  6.53%    5.117      6 Template:Caption
-  6.48%    5.080     14 Template:KEY
-  6.13%    4.805      2 Template:Docnav
-  5.06%    3.968     34 Template:Version
+100.00%   48.565      1 -total
+ 19.93%    9.679      1 Template:Sketcher_Tools_navi/cs
+ 16.65%    8.086      1 Template:Userdocnavi/cs
+ 12.89%    6.260      2 Template:Navigation_menu_2
+  8.17%    3.967      1 Template:PropertyView
+  7.59%    3.688     34 Template:Version
+  7.51%    3.646      2 Template:Docnav
+  5.48%    2.662      6 Template:Caption
+  5.00%    2.430      8 Template:VersionPlus
+  4.81%    2.334     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145706 and revision id 1740657. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145924 and revision id 1740659. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
