--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -308,7 +308,7 @@
 <p>V re&#382;imu &uacute;pravy n&aacute;&#269;rtu lze pou&#382;&iacute;t n&aacute;sleduj&iacute;c&iacute; metody v&yacute;b&#283;ru:
 </p><p><span id="3D_View_element_selection"></span>
 </p>
-<h3><span id="V.C3.BDb.C4.9Br_prvk.C5.AF_3D_zobrazen.C3.AD"></span><span class="mw-headline" id="V&yacute;b&#283;r_prvk&#367;_3D_zobrazen&iacute;">V&yacute;b&#283;r prvk&#367; 3D zobrazen&iacute;</span></h3>
+<h3><span id="V.C3.BDb.C4.9Br_prvk.C5.AF_ve_3D_zobrazen.C3.AD"></span><span class="mw-headline" id="V&yacute;b&#283;r_prvk&#367;_ve_3D_zobrazen&iacute;">V&yacute;b&#283;r prvk&#367; ve 3D zobrazen&iacute;</span></h3>
 <p>Stejn&#283; jako jinde ve FreeCADu lze prvek ve <a href="../3D_View.html" title="3D View">3D zobrazen&iacute;</a> vybrat jedin&yacute;m kliknut&iacute;m lev&yacute;m tla&#269;&iacute;tkem my&scaron;i. P&#345;i v&yacute;b&#283;ru v&iacute;ce prvk&#367; v&scaron;ak nen&iacute; nutn&eacute; dr&#382;et stisknutou kl&aacute;vesu <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Ctrl</span>. Podr&#382;en&iacute; t&eacute;to kl&aacute;vesy je v&scaron;ak mo&#382;n&eacute; a m&aacute; tu v&yacute;hodu, &#382;e m&#367;&#382;ete kliknout mimo, ani&#382; byste ztratili v&yacute;b&#283;r. T&iacute;mto zp&#367;sobem lze vybrat hrany, body a vazby.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
@@ -500,12 +500,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118145925
+Cached time: 20260118145935
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.458 seconds
-Real time usage: 0.634 seconds
+CPU time usage: 0.451 seconds
+Real time usage: 0.665 seconds
 Preprocessor visited node count: 1407/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -516,19 +516,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.565      1 -total
- 19.93%    9.679      1 Template:Sketcher_Tools_navi/cs
- 16.65%    8.086      1 Template:Userdocnavi/cs
- 12.89%    6.260      2 Template:Navigation_menu_2
-  8.17%    3.967      1 Template:PropertyView
-  7.59%    3.688     34 Template:Version
-  7.51%    3.646      2 Template:Docnav
-  5.48%    2.662      6 Template:Caption
-  5.00%    2.430      8 Template:VersionPlus
-  4.81%    2.334     14 Template:KEY
+100.00%   51.053      1 -total
+ 21.34%   10.894      1 Template:Sketcher_Tools_navi/cs
+ 13.41%    6.844      1 Template:PropertyView
+ 12.14%    6.198      2 Template:Navigation_menu_2
+  9.29%    4.741      1 Template:Userdocnavi/cs
+  7.58%    3.871      2 Template:Docnav
+  7.21%    3.679     34 Template:Version
+  6.36%    3.249      1 Template:Variable
+  6.23%    3.179      6 Template:Caption
+  5.57%    2.843      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145924 and revision id 1740659. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118145934 and revision id 1740661. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
