--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -320,10 +320,9 @@
 <ul><li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zleva doprava, abyste vybrali prvky, kter&eacute; le&#382;&iacute; zcela uvnit&#345; obd&eacute;ln&iacute;ku.</li>
 <li>Klikn&#283;te na pr&aacute;zdnou oblast a p&#345;et&aacute;hn&#283;te obd&eacute;ln&iacute;k zprava doleva, abyste vybrali tak&eacute; prvky, kter&eacute; se dot&yacute;kaj&iacute; nebo prot&iacute;naj&iacute; obd&eacute;ln&iacute;k.</li></ul></li></ol>
 <p>Pomoc&iacute; r&aacute;me&#269;ku m&#367;&#382;ete vybrat hrany a body, nelze v&scaron;ak vybrat vazby.
+</p><p><span id="3D_View_connected_geometry_selection"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="3D_View_connected_geometry_selection">3D View connected geometry selection</span></h3>
-</div>
+<h3><span id="V.C3.BDb.C4.9Br_propojen.C3.A9_geometrie_ve_3D_pohledu"></span><span class="mw-headline" id="V&yacute;b&#283;r_propojen&eacute;_geometrie_ve_3D_pohledu">V&yacute;b&#283;r propojen&eacute; geometrie ve 3D pohledu</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p>
@@ -495,12 +494,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118150613
+Cached time: 20260118150658
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.485 seconds
-Real time usage: 0.733 seconds
+CPU time usage: 0.492 seconds
+Real time usage: 1.024 seconds
 Preprocessor visited node count: 1405/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -511,19 +510,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.902      1 -total
- 22.07%    8.143      1 Template:Sketcher_Tools_navi/cs
- 14.94%    5.513      1 Template:Userdocnavi/cs
- 13.74%    5.071      2 Template:Navigation_menu_2
-  8.92%    3.291      1 Template:PropertyView
-  8.01%    2.955     34 Template:Version
-  7.73%    2.851      2 Template:Docnav
-  6.19%    2.285      8 Template:VersionPlus
-  5.09%    1.878      6 Template:Caption
-  4.73%    1.745      1 Template:Variable
+100.00%   53.998      1 -total
+ 20.79%   11.228      1 Template:Sketcher_Tools_navi/cs
+ 14.32%    7.735      1 Template:PropertyView
+ 11.47%    6.193      2 Template:Docnav
+ 10.50%    5.671      1 Template:Variable
+  9.88%    5.333      1 Template:Userdocnavi/cs
+  9.34%    5.043      2 Template:Navigation_menu_2
+  8.01%    4.324      1 Template:TOCright
+  7.91%    4.270      6 Template:Caption
+  6.18%    3.335     34 Template:Version
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150612 and revision id 1740671. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118150657 and revision id 1740673. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
