--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -325,10 +325,9 @@
 <h3><span id="V.C3.BDb.C4.9Br_propojen.C3.A9_geometrie_ve_3D_pohledu"></span><span class="mw-headline" id="V&yacute;b&#283;r_propojen&eacute;_geometrie_ve_3D_pohledu">V&yacute;b&#283;r propojen&eacute; geometrie ve 3D pohledu</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>Poklep&aacute;n&iacute;m na hranu v 3D pohledu vyberete v&scaron;echny hrany p&#345;&iacute;mo a nep&#345;&iacute;mo spojen&eacute; s touto hranou prost&#345;ednictv&iacute;m koncov&yacute;ch bod&#367;. Nen&iacute; nutn&eacute;, aby hrany byly spojeny <a href="../Sketcher_ConstrainCoincident.html" title="Sketcher ConstrainCoincident">soub&#283;&#382;n&yacute;mi vazbami</a>, koncov&eacute; body mus&iacute; m&iacute;t pouze stejn&eacute; sou&#345;adnice.
+</p><p><span id="Sketcher_Dialog_selection"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Sketcher_Dialog_selection">Sketcher Dialog selection</span></h3>
-</div>
+<h3><span id="Dialogov.C3.A9_okno_v.C3.BDb.C4.9Bru_Sketcheru"></span><span class="mw-headline" id="Dialogov&eacute;_okno_v&yacute;b&#283;ru_Sketcheru">Dialogov&eacute; okno v&yacute;b&#283;ru Sketcheru</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Edges and points can also be selected from the Elements section of the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>, and constraints from the Constraints section of that dialog.
 </p>
@@ -489,12 +488,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118151132
+Cached time: 20260118151245
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.469 seconds
-Real time usage: 0.664 seconds
+Real time usage: 0.647 seconds
 Preprocessor visited node count: 1403/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
@@ -505,19 +504,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.265      1 -total
- 23.28%   10.303      1 Template:Sketcher_Tools_navi/cs
- 15.06%    6.668      1 Template:Userdocnavi/cs
- 13.31%    5.891      2 Template:Navigation_menu_2
- 11.91%    5.271      1 Template:PropertyView
-  7.06%    3.125      2 Template:Docnav
-  6.01%    2.661      8 Template:VersionPlus
-  5.89%    2.607     34 Template:Version
-  5.44%    2.409      1 Template:Variable
-  5.24%    2.318     14 Template:KEY
+100.00%   38.005      1 -total
+ 21.76%    8.268      1 Template:Sketcher_Tools_navi/cs
+ 17.55%    6.670      1 Template:Userdocnavi/cs
+ 14.55%    5.529      2 Template:Navigation_menu_2
+  9.65%    3.668      1 Template:PropertyView
+  6.97%    2.650      8 Template:VersionPlus
+  6.85%    2.602     34 Template:Version
+  6.40%    2.434      2 Template:Docnav
+  5.12%    1.944      1 Template:Variable
+  5.10%    1.937     14 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151131 and revision id 1740677. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151244 and revision id 1740679. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
