--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -328,10 +328,8 @@
 </p><p><span id="Sketcher_Dialog_selection"></span>
 </p>
 <h3><span id="Dialogov.C3.A9_okno_v.C3.BDb.C4.9Bru_Sketcheru"></span><span class="mw-headline" id="Dialogov&eacute;_okno_v&yacute;b&#283;ru_Sketcheru">Dialogov&eacute; okno v&yacute;b&#283;ru Sketcheru</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>Edges and points can also be selected from the Elements section of the <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">Sketcher Dialog</a>, and constraints from the Constraints section of that dialog.
+<p>Hrany a body lze tak&eacute; vybrat v sekci Prvky <a href="../Sketcher_Dialog.html" title="Sketcher Dialog">dialogov&eacute;ho okna Sketcheru</a> a vazby v sekci Vazby tohoto dialogov&eacute;ho okna.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Select_All_shortcut">Select All shortcut</span></h3>
 </div>
@@ -488,13 +486,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118151245
+Cached time: 20260118151428
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.469 seconds
-Real time usage: 0.647 seconds
-Preprocessor visited node count: 1403/1000000
+CPU time usage: 0.433 seconds
+Real time usage: 0.639 seconds
+Preprocessor visited node count: 1402/1000000
 Post&#8208;expand include size: 34962/2097152 bytes
 Template argument size: 9779/2097152 bytes
 Highest expansion depth: 7/100
@@ -504,19 +502,19 @@ Unstrip post&#8208;expand size: 4773/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.005      1 -total
- 21.76%    8.268      1 Template:Sketcher_Tools_navi/cs
- 17.55%    6.670      1 Template:Userdocnavi/cs
- 14.55%    5.529      2 Template:Navigation_menu_2
-  9.65%    3.668      1 Template:PropertyView
-  6.97%    2.650      8 Template:VersionPlus
-  6.85%    2.602     34 Template:Version
-  6.40%    2.434      2 Template:Docnav
-  5.12%    1.944      1 Template:Variable
-  5.10%    1.937     14 Template:KEY
+100.00%   42.111      1 -total
+ 17.68%    7.447      1 Template:Sketcher_Tools_navi/cs
+ 12.70%    5.346      1 Template:Userdocnavi/cs
+ 12.61%    5.310      2 Template:Navigation_menu_2
+ 11.65%    4.905      1 Template:PropertyView
+  9.70%    4.087     34 Template:Version
+  7.53%    3.170      5 Template:MenuCommand
+  7.03%    2.960      2 Template:Docnav
+  6.99%    2.943     14 Template:KEY
+  5.72%    2.408      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151244 and revision id 1740679. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118151428 and revision id 1740681. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
